# phosg-audio

./: .gitignore  Audiocat.cc  CMakeLists.txt  Capture.cc  Capture.hh  Constants.cc  Constants.hh  File.cc  File.hh  FourierTransform.cc  FourierTransform.hh  Makefile  README  Sound.cc  Sound.hh  Stream.cc  Stream.hh  phosg-audioConfig.cmake  phosg-audioConfig.cmake.in
.github/workflows/: cmake.yml
src/: Audiocat.cc  Capture.cc  Capture.hh  Constants.cc  Constants.hh  Convert.cc  Convert.hh  File.cc  File.hh  FourierTransform.cc  FourierTransform.hh  Sound.cc  Sound.hh  Stream.cc  Stream.hh
